added tower placement logic and tower classes to game server
